--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@
 
 # Ignore bundler config.
 /.bundle
-
+/db/development.sqlite3
+/db/test.sqlite3
 # Ignore all logfiles and tempfiles.
 /log/*
 !/log/.keep
